hphp/test/zend/bad/ext/session/tests/002.php
<?php
error_reporting(E_ALL);
session_unset();
print "ok\n";